--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,19 +179,18 @@ hr {
   transition: 0.5s;
 }
 .product-item img{
-  width: 180px;
+  width: 180px!important;
+}
+
+
+.product-item p{
+  font-weight: bold;
+  margin-top: 8px;
 }
 .product-item:hover{
   transform: scale(1.05);
 }
-button{
-  border-radius: 10px;
-  outline: none;
-  border: 1px solid transparent;
-  padding: 10px 20px
+.nav-link{
+  padding: 5px 30px;
 }
 
-
-.hairstyle{
-
-}
